# profuzz

./: .gitignore  Cargo.toml  README.md
example/profuzz_network_stack/: Cargo.toml
example/profuzz_network_stack/src/: main.rs
example/profuzz_tplink_tmdp/: Cargo.toml
example/profuzz_tplink_tmdp/fuzz_out/: crashes.json
example/profuzz_tplink_tmdp/src/: main.rs
example/profuzz_tplink_tmdp/tmplink_fuzz_out/: crashes.json
example/target_tcp_server/: Cargo.toml  Dockerfile  README.md  simulate.sh
example/target_tcp_server/src/: main.rs
profuzz_common/: Cargo.toml  README.md
profuzz_common/src/: healthcheck.rs  lib.rs  mutable.rs  resethandler.rs  transport.rs
profuzz_common/src/healthcheck/: dummy.rs  tcp.rs
profuzz_common/src/mutable/: pnet.rs
profuzz_common/src/mutable/pnet/: constraints.rs
profuzz_common/src/resethandler/: dummy.rs
profuzz_common/src/transport/: raw_socket.rs  tcp.rs
profuzz_core/: Cargo.toml
profuzz_core/src/: cli.rs  colored.rs  dangerous_numbers.rs  error.rs  fuzz.rs  lib.rs  log.rs  mutator.rs  output.rs  traits.rs  triage.rs  types.rs
profuzz_core/src/fuzz/: engine.rs  stats.rs  ui.rs
profuzz_core/src/triage/: dynamic.rs  utils.rs
