[package]
name = "profuzz_common"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
license = "Apache-2.0"
categories = ["network-programming"]
authors = ["Tobias Müller <git@tsmr.eu>"]
description = "profuzz_common is a collection of ready to use implementations for the different traits to be implemented to run profuzz_core."
repository = "https://github.com/otsmr/profuzz"
homepage = "https://tsmr.eu/generic-protocol-fuzzer.html"

[dependencies]
hex = "0.4.3"
pnet = "0.35.0"
profuzz_core = { version = "0.1.0", path = "../profuzz_core/" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
pnet_layers = "0.1.0"
serde = { version = "1.0.0", features = ["derive"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
log = "0.4.27"
pcap = "2.2.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"
