[package]
name = "profuzz_core"
version = "0.1.0"
edition = "2024"
categories = ["network-programming"]
license = "Apache-2.0"
readme = "../README.md"
authors = ["Tobias Müller <git@tsmr.eu>"]
description = "profuzz is a generic approach to easily create a fast and easy-to use network protocol fuzzer for custom targets."
repository = "https://github.com/otsmr/profuzz"
homepage = "https://tsmr.eu/generic-protocol-fuzzer.html"

[dependencies]
rand = { version = "0.9.1", features = ["thread_rng"] }
num = "0.4.3"
num-traits = "0.2.19"
rand_chacha = "0.9.0"
tokio = { version = "1.44.2", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
sha1 = "0.10.6"
clap = { version = "4.5.31", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1.41", features = [] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.2", features = ["tracing-support"] }
hex = "0.4.3"
