[package]
name = "profuzz_network_stack"
version = "0.1.0"
edition = "2024"

[dependencies]
pnet_layers = "0.1.0"
profuzz_core = { path = "../../profuzz_core/" }
profuzz_common = { path = "../../profuzz_common/" }
tokio = { version = "1.44.2", features = ["full"] }
pnet = "0.35.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
log = "0.4.27"
