[package]
name = "profuzz_tplink_tmdp"
version = "0.1.0"
edition = "2024"

[dependencies]
pnet_layers = "0.1.0"
pnet_show = "0.1.1"
profuzz_core = { path = "../../profuzz_core/" }
profuzz_common = { path = "../../profuzz_common/" }
pnet_base = { version = "0.35.0", default-features = false }
pnet_macros_support = { version = "0.35.0" }
pnet_macros = { version = "0.35.0" }
tokio = { version = "1.44.2", features = ["full"] }
pnet = "0.35.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
crc = "3.2.1"
hex = "0.4.3"
